2000-09-09  Arno W. Peters  <A.W.Peters@ieee.org>

	* dotcards.c: Added assertions to guard a double indirection, now
	ngspice will bomb out on an assertion instead of a segfault.

2000-07-18  Arno W. Peters  <A.W.Peters@ieee.org>

	* com_ahelp.c, com_help.c, com_plot.c, com_set.c, com_unset.c:
	Updated header file includes.

	* quote.c: Code formatting changes.
	
2000-07-16  Arno W. Peters  <A.W.Peters@ieee.org>

	* com_set.h: New header file.

	* com_state.c, com_state.h: Separated from debugcom.c.

	* com_dump.c, com_dump.h: Separated from debugcom.c.

	* debugcom.c, debugcom.h: Removed.

	* Makefile.am: Updates for added/removed files.

2000-03-22  Paolo Nenzi <p.nenzi@ieee.org>

	* rawfile.c: Applied Michael Widlok patch.

	* spiceif.c: Applied Michael Widlok patch. 

2000-03-12  Paolo Nenzi <p.nenzi@ieee.org>

	* x11.c: Cleared the code. Rewmoved some empty return on void
	functions.

1999-12-20  Paolo Nenzi <p.nenzi@ieee.org>

	* outif.c: To fix various "save"-related segmentation faults, make
	this one-line patch to outitf.c: line 356, change unique =
	devname; to unique = copy(devname);

1999-12-20  Paolo Nenzi <p.nenzi@ieee.org>

        * subckt.c: Bug: Current controlled switch subcircuit does not
	expand the controlling source correctly: vsrc expands to
	name:vsrc, not to v:name:src.

	Fix: changed this file to indicate that w device has only 2 not 3
	nodes and 1 not zero controlling sources.

1999-09-07  Emmanuel Rouat  <emmanuel.rouat@wanadoo.fr>

	* *.c: put back static functions declarations back in the .c files
	(shouldn't be in .h files!)

1999-09-07  Arno  <A.W.Peters@ieee.org>

	* aspice.c: template to fprintf now conform to argument types.

	* cmath1.c:

	* cmath2.c: removed most warnings about possible use of
	uninitialized variables.  Only two remain in cx_sqrt().

1999-09-06  Arno Peters <A.W.Peters@ieee.org>

	* dotcards.c: Put proper braces around an
        ambiguous if/else construct.

	* postcoms.c: 
